<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ifc">

    <fragment
        android:id="@+id/navigation_ifc"
        android:name="fr.igm.robotmissions.ui.ifc.IfcFragment"
        android:label="@string/title_ifc"
        tools:layout="@layout/fragment_ifc" />

    <fragment
        android:id="@+id/navigation_missions"
        android:name="fr.igm.robotmissions.ui.missions.MissionsFragment"
        android:label="@string/title_missions"
        tools:layout="@layout/fragment_missions" />

    <fragment
        android:id="@+id/navigation_robots"
        android:name="fr.igm.robotmissions.ui.robots.RobotsFragment"
        android:label="@string/title_robots"
        tools:layout="@layout/fragment_robots" />

    <fragment
        android:id="@+id/navigation_inprog"
        android:name="fr.igm.robotmissions.ui.inprog.InProgFragment"
        android:label="@string/title_inprog"
        tools:layout="@layout/fragment_inprog" />
</navigation>
