<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:id="@+id/inprog_robot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_robot"
            android:textSize="@dimen/form_field_text_size"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/inprog_robot_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:visibility="gone" />

        <TextView
            android:id="@+id/inprog_robot_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inprog_ifc_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inprog_robot_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_mission"
            android:textSize="@dimen/form_field_text_size"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/inprog_mission_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/text_name" />

        <TextView
            android:id="@+id/inprog_mission_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="none" />
    </LinearLayout>


    <fr.igm.robotmissions.ui.ifc.IfcView
        android:id="@+id/inprog_ifc_data_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inprog_ifc_name_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/inprog_run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />



</androidx.constraintlayout.widget.ConstraintLayout>