<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ifc_name"
            android:textSize="@dimen/form_field_text_size"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/ifc_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/ifc_name" />

        <TextView
            android:id="@+id/ifc_name_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/ifc_name"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ifc_last_upload_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/form_field_text_size"
            android:textStyle="bold"
            android:text="@string/last_upload" />

        <TextView
            android:id="@+id/ifc_detail_last_upload_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ifc_load_file_button"
        android:text="@string/ifc_file_select"
        app:layout_constraintTop_toBottomOf="@+id/ifc_last_upload_linear_layout"
        android:onClick="loadIfcFile"/>

    <fr.igm.robotmissions.ui.ifc.IfcView
        android:id="@+id/ifc_ifc_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ifc_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifc_load_file_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ifc_save_button"
        app:layout_constraintBottom_toTopOf="@id/ifc_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:onClick="saveButtonClick"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ifc_edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit_24dp"
        android:onClick="floatingButtonClick"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:layout_marginVertical="@dimen/activity_vertical_margin"/>


</androidx.constraintlayout.widget.ConstraintLayout>